Added somethings to the webpage

--- a/public/connect_to_google.html
+++ b/public/connect_to_google.html
@@ -32,7 +32,7 @@
         <label>Google_cx</label>
         <input type="text" class="form-input google-cx-input" name="google_cx" autocomplete="off" />
       </form>
-      <button type="button" class="btn submit-connection-btn highlight">Submit</button>
+      <button type="button" class="btn submit-connection-btn highlight"><span>Submit</span></button>
     </div>
   </div>
 
