--- a/public/connect_to_mongo.html
+++ b/public/connect_to_mongo.html
@@ -28,7 +28,7 @@
         <label>Mongo_uri</label>
         <input type="text" class="form-input mongo-uri-input" name="mongo_uri" autocomplete="off" />
       </form>
-      <button type="button" class="btn submit-connection-btn highlight">Submit</button>
+      <button type="button" class="btn submit-connection-btn highlight"><span>Submit</span></button>
     </div>
   </div>
 
